# pf-testbed

./: .gitmodules  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  env.example  jest.config.js  kubeconfig-kind.yaml  kubeconfig-local.yaml  package-lock.json  package.json  requirements.txt  run.bat  tsconfig.json
.github/workflows/: ci-cd.yml  ci.yaml  ci.yml  deploy.yml  e2e.yaml  on-core-release.yaml  performance-optimization.yaml  report.yaml  safety-case.yaml  security.yaml  slo-gate.yaml  testbed-paper-faithful.yml  testbed-report.yaml  testbed-reporting.yaml  testbed-slo.yaml  verify.yml
docs/: end-to-end-decision-path.md  postman.json  quickstart.md  quickstart_byo_agent.md
ops/grafana/: prometheus.yml
runtime/retrieval-gateway/: Cargo.toml
runtime/retrieval-gateway/src/: gateway.rs  main.rs
scripts/: manage-deps.py  pin_core_version.sh
testbed/: PAPER_FAITHFUL_README.md  README.md
testbed/__tests__/: setup.ts
testbed/accuracy/: accuracy_monitor.py  config.yaml  requirements.txt
testbed/chaos/: chaos_config.yaml  chaos_runner.py  requirements.txt
testbed/cost_perf/: config.yaml  cost_accounting.py
testbed/data/: generator.py  honeytoken-generator.py  requirements.txt  seed_runner.py
testbed/grafana/: Makefile  README.md
testbed/load/: k6_slo.js
testbed/policy/: conformance-tests.ts  types.ts
testbed/prometheus/: README.md  prometheus.yml  recording_rules.yml
testbed/redteam/: runner.ts
testbed/scenarios/: traffic_runner.py  user_journeys.yaml
testbed/tools/: package.json  synthetic-probe.ts
(+99 files in other folders)
