[package]
name = "retrieval-gateway"
version = "0.1.0"
edition = "2021"
authors = ["Provability Fabric Team"]
description = "Retrieval Gateway for Provability Fabric Testbed"
license = "MIT"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
ed25519-dalek = "2.0"
base64 = "0.21"
rand = "0.8"
env_logger = "0.10"
log = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "retrieval-gateway"
path = "src/main.rs"
